--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-Emulator/data/cache/* filter=lfs diff=lfs merge=lfs -text
+Server/data/cache/* filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
