--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,8 @@ cache:
 verify:jdk11:
   stage: build
   script:
-    - 'cd Emulator'
+    - 'mvn $MAVEN_CLI_OPTS -f constants/pom.xml install'
+    - 'cd Server'
     - 'mvn $MAVEN_CLI_OPTS verify'
   except:
     variables:
