--- a/Server/data/configs/item_configs.json
+++ b/Server/data/configs/item_configs.json
@@ -9134,6 +9134,7 @@
     "weapon_interface": "6",
     "render_anim": "2554",
     "equipment_slot": "3",
+    "attack_anims": "390,390,381,390",
     "grand_exchange_price": "619",
     "name": "Machete",
     "tradeable": "true",
@@ -58094,6 +58095,7 @@
     "weapon_interface": "6",
     "render_anim": "2554",
     "equipment_slot": "3",
+    "attack_anims": "390,390,381,390",
     "grand_exchange_price": "179",
     "name": "Opal machete",
     "tradeable": "true",
@@ -58118,6 +58120,7 @@
     "weapon_interface": "6",
     "render_anim": "2554",
     "equipment_slot": "3",
+    "attack_anims": "390,390,381,390",
     "grand_exchange_price": "4473",
     "name": "Jade machete",
     "tradeable": "true",
