Add boss, interactions last dialogues

--- a/Server/data/configs/object_configs.json
+++ b/Server/data/configs/object_configs.json
@@ -58589,5 +58589,9 @@
   {
     "ids": "27057",
     "examine": "The opened package."
+  },
+  {
+    "ids": "27062",
+    "examine": "Looks like it's out of control!"
   }
 ]
