--- a/Server/data/configs/object_configs.json
+++ b/Server/data/configs/object_configs.json
@@ -58579,6 +58579,10 @@
     "examine": "A snake in a tree."
   },
   {
+    "ids": "27186",
+    "examine": "I wonder where this leads?"
+  },
+  {
     "ids": "27054,27055",
     "examine": "A smelly package."
   },
